# romea-ros2-rtls

./: romea_rtls.repos
romea_rtls/: CMakeLists.txt  package.xml
romea_rtls_bringup/: CMakeLists.txt  package.xml
romea_rtls_bringup/launch/: rtls_hub.launch.py
romea_rtls_bringup/python/: romea_rtls_bringup.py
romea_rtls_bringup/test/: tag0.rtls_transceiver.yaml  tag1.rtls_transceiver.yaml  test_rtls_transceivers_bringup.py  test_rtls_transceivers_bringup.yaml
romea_rtls_coordinators/: CMakeLists.txt  package.xml
romea_rtls_coordinators/include/romea_rtls_coordinators/: rtls_coordinator.hpp  rtls_coordinator_parameters.hpp  rtls_coordinator_scheduler_interface.hpp  rtls_coordinator_transceivers_interface.hpp  rtls_georeferenced_coordinator.hpp  rtls_simple_coordinator.hpp  visibility_control.h
romea_rtls_coordinators/src/: rtls_coordinator.cpp  rtls_coordinator_parameters.cpp  rtls_coordinator_scheduler_interface.cpp  rtls_coordinator_transceivers_interface.cpp
romea_rtls_coordinators/test/: test_rtls_hub.cpp
romea_rtls_data_broadcaster/: CMakeLists.txt  package.xml
romea_rtls_data_broadcaster/include/romea_rtls_data_broadcaster/: rtls_data_broadcaster.hpp  visibility_control.h
romea_rtls_data_broadcaster/src/: rtls_data_broadcaster.cpp
romea_rtls_data_broadcaster/test/: test_rtls_hub.cpp
romea_rtls_utils/: CMakeLists.txt  package.xml
romea_rtls_utils/include/romea_rtls_utils/: rtls_communication_hub.hpp  rtls_parameters.hpp  visibility_control.h
romea_rtls_utils/src/: rtls_communication_hub.cpp  rtls_parameters.cpp
romea_rtls_utils/test/: CMakeLists.txt  test_rtls_communicaion_hub.cpp  test_rtls_communication_hub.cpp  test_rtls_parameters.cpp  test_rtls_parameters.yaml
